chore: JWT 서명과 mockk, 통합 테스트 Liquibase 의존성 추가